<resources>
    <string name="app_name">FFI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">FFI</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_about">About</string>
    <string name="menu_umeed">Umeed</string>
    <string name="menu_bloodline">BloodLine</string>
    <string name="menu_escape_jagriti">Escape_Jagriti</string>
    <string name="menu_escape">Escape</string>
    <string name="menu_jagriti">Jagirti</string>
    <string name="menu_achive">Achivements</string>
    <string name="menu_vision">Vision</string>
    <string name="menu_disha">Disha</string>

    <string name="home_second">Home Second</string>
    <string name="instagram">instagram_icon</string>
    <string name="facebook">facebook_icon</string>
    <string name="fast_forward_india">FAST FORWARD INDIA</string>
    <string name="fast_forward_india_name">FAST FORWARD INDIA</string>
    <string name="bloodline">BLOODLINE</string>
    <string name="escape_jagrati">ESCAPE AND JAGRITI</string>
    <string name="disha">DISHA</string>
    <string name="umeed">UMEED</string>
    <string name="todo">TODO</string>
    <string name="aboutbloodline">ABOUT</string>
    <string name="add_case">ADD CASE</string>
    <string name="log_out">LOG OUT</string>
    <string name="title_activity_event">Events</string>
    <string name="large_text">
        "Notice"

    </string>
</resources>
